--- a/admin_ux.admin.css
+++ b/admin_ux.admin.css
@@ -49,8 +49,18 @@ table.field-multiple-table { width: auto; min-width: 50%; }
 
 /* Make tags more visible on the context UI page */
 table.context-admin td.tag {
-  font-size: 2em;
+  font-size: 1.2em;
   font-weight: bold;
+  padding-top: 15px;
+}
+/* Make context tables more compact by display name and description on same row */
+table.context-admin div.description {
+  display: inline-block;
+  margin-left: 2em;
+}
+/* less table spacing */
+table.context-admin td {
+  padding: 5px;
 }
 
 /* Viewfield */
